# project-euler

./: LICENSE  README.md  doctests.hs  index.html  project-euler.cabal  site.hs  stack.yaml
.circleci/: config.yml
css/: syntax.css
docs/: index.html
docs/problems/: problem-001.html  problem-002.html  problem-004.html  problem-006.html  problem-008.html  problem-009.html  problem-012.html  problem-013.html  problem-016.html  problem-020.html
lib/: NumberUtils.hs
problems/: problem-001.lhs  problem-002.lhs  problem-004.lhs  problem-006.lhs  problem-008.lhs  problem-009.lhs  problem-012.lhs  problem-013.lhs  problem-016.lhs  problem-020.lhs
templates/: default.html  problem-list.html
