name:                project-euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robertjlooby/project-euler#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           Robert Looby
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable project-euler
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
test-suite doctests
  main-is:             doctests.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       doctest
